<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.github.oheger.locationteller.ui.MapFragment">
    <item android:id="@+id/item_updateMap"
          android:title="@string/item_update_map"
          android:orderInCategory="100"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/item_zoomArea"
          android:title="@string/item_zoom_tracked_area"
          android:orderInCategory="100"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/item_center"
          android:title="@string/item_center_to_recent"
          android:orderInCategory="100"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/item_own_location"
          android:title="@string/item_update_my_location"
          android:orderInCategory="100"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/item_center_own_location"
          android:title="@string/item_center_to_my_location"
          android:orderInCategory="100"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/item_autoCenter"
          android:title="@string/item_auto_center"
          android:orderInCategory="100"
          android:checkable="true"
          android:checked="true"
          app:showAsAction="never"/>
    <item android:id="@+id/item_fading_mode"
          android:title="@string/item_fading_mode"
          android:orderInCategory="100">
        <menu>
            <group android:id="@+id/group_fading_mode"
                android:checkableBehavior="single">
                <item android:id="@+id/item_fade_fast"
                    android:title="@string/item_fading_mode_fast"/>
                <item android:id="@+id/item_fade_slow"
                    android:title="@string/item_fading_mode_slow"/>
                <item android:id="@+id/item_fade_fast_strong"
                    android:title="@string/item_fading_mode_fast_and_strong"/>
                <item android:id="@+id/item_fade_slow_strong"
                    android:title="@string/item_fading_mode_slow_and_strong"/>
                <item android:id="@+id/item_fade_none"
                    android:title="@string/item_fading_mode_none" />
            </group>
        </menu>
    </item>
</menu>
