<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mapView">

    <fragment
        android:id="@+id/mapView"
        android:name="com.github.oheger.locationteller.ui.MapFragment"
        android:label="@string/mapView"
        tools:layout="@layout/fragment_map" />
    <fragment
        android:id="@+id/receiverView"
        android:name="com.github.oheger.locationteller.ui.ReceiverFragment"
        android:label="@string/receiverView" />
    <fragment
        android:id="@+id/trackSettingsFragment"
        android:name="com.github.oheger.locationteller.ui.TrackSettingsFragment"
        android:label="@string/trackSettingsView" />
</navigation>