<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TrackFragment">

    <Switch
        android:id="@+id/switchTrackEnabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab_track_enabled"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/labError"
        app:layout_constraintBottom_toTopOf="@+id/txtLastUpdateTime"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#ff0000"
        android:text="@string/lab_last_error" />

    <TextView
        android:id="@+id/txtLastErrorTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/labError"
        app:layout_constraintLeft_toRightOf="@+id/labError"
        android:textColor="#ff0000" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab_last_location_update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/txtLastUpdateTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        tools:text="12:27:53"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintLeft_toRightOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>